TITLE: Changelog for the triples module for GNU Emacs.

* 0.2.6
- Fix bug where the functions =triples-subjects-with-predicate-object= could return the same subject multiple times.
* 0.2.5
- Fix bug where backing up a =nil= filename resulted in an error.
- Fix bug where strings are wrongly escapified, distoring text especially when repeatedly saved.
* 0.2.4
- Move the =CHANGELOG.org= file to =NEWS.org= so the changes show up in GNU ELPA.
* 0.2.3
- Allow =nil= for =filename= arguments in the backup functions.  This will default to backing up the default database.
- Fix issue with fallback for bad backup strategies.
* 0.2.2
- Fix error behavior using Emacs builtin sqlite.  Now error is rethrown instead of swallowed.
* 0.2.1
- Add backup strategy =never=.
* 0.2
- Create a default database to encourage a shared triple database.  Add information on why this is an interesting idea in the README.
- Add support for backups of databases via =triples-backup=, and a simple way to have a sane and shared backups created with the new =triples-backups= module.
- Add =triples-move-subject= which will move both a subject as well as reference to it.
* 0.1.2
- Bugfix release to remove backward compatibility with pre-Emacs 29 versions.
* 0.1.1
 - Bugfix release to fix =triples-subject-with-predicate-object=.
* 0.1
- This is the initial version that contained basic triple functionality, and was integrated into GNU ELPA.