@@ -2,6 +2,7 @@ TITLE: Changelog for the triples module for GNU Emacs.
 
 * 0.2.6
 - Fix bug where the functions =triples-subjects-with-predicate-object= could return the same subject multiple times.
+- Fix bug where backups were causing messages about "obsolete timestamp" for some users on Emacs 28.2.
 * 0.2.5
 - Fix bug where backing up a =nil= filename resulted in an error.
 - Fix bug where strings are wrongly escapified, distoring text especially when repeatedly saved.
